# FastAPI-SQLModel-playground

./: create_db.py  database.py  main.py  models.py  pyproject.toml  test_main.http
