[tool.poetry]
name = "fastapiproject-bookstore-ssqlmodel"
version = "0.1.0"
description = ""
authors = ["Dominik Piekarczyk <piekarczyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
